# wiretrail

./: CHANGELOG.md  Cargo.toml  README.md  USERGUIDE.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-24-wiretrail-exports.md  2026-05-24-wiretrail-failures-timing.md  2026-05-24-wiretrail-foundation.md  2026-05-24-wiretrail-inventory-grouping.md  2026-05-24-wiretrail-m1-patterns.md  2026-05-24-wiretrail-m2-auth.md  2026-05-24-wiretrail-m3-diff-checks.md  2026-05-24-wiretrail-m5-diagnosis.md  2026-05-24-wiretrail-m6-extraction.md  2026-05-24-wiretrail-m7-regression-rules.md  (+2 more)
src/: assemble.rs  classify.rs  config.rs  correlate.rs  errorbody.rs  filter.rs  fingerprint.rs  glob.rs  grouping.rs  jsonpath.rs  jwt.rs  lib.rs  loader.rs  main.rs  model.rs  normalize.rs  opaque.rs  raw.rs  recommender.rs  redact.rs  render.rs  stats.rs  timing.rs  vendor.rs
src/analysis/: auth.rs  cascade.rs  checks.rs  compare.rs  curl.rs  diagnose.rs  diff.rs  duplicates.rs  endpoints.rs  errors.rs  export.rs  extract.rs  handoff.rs  hosts.rs  jwt.rs  mod.rs  pagination.rs  rate_limit.rs  redirects.rs  report.rs  retries.rs  rules.rs  search.rs  show_entry.rs  slowest.rs  startup.rs  storms.rs  subsystems.rs  summary.rs  timeline.rs  transitions.rs  validate.rs
tests/: cli_auth.rs  cli_auto.rs  cli_compare.rs  cli_diagnose.rs  cli_diff.rs  cli_exports.rs  cli_extract.rs  cli_failures.rs  cli_inventory.rs  cli_patterns.rs  cli_redaction.rs  cli_summary.rs
tests/redaction_fixtures/: secret_in_path.har
(+8 files in other folders)
